BlockCard: Fix title alignment (#68115)

--- a/packages/block-editor/src/components/block-card/style.scss
+++ b/packages/block-editor/src/components/block-card/style.scss
@@ -16,8 +16,11 @@
 		font-size: $default-font-size;
 		line-height: $default-line-height;
 		margin: 0;
-		padding: 3px 0; // This makes the title as high as the icon.
 	}
+}
+
+.block-editor-block-card__name {
+	padding: 3px 0; // This makes the title as high as the icon.
 }
 
 .block-editor-block-card .block-editor-block-icon {
